--- a/chatbot/web.config
+++ b/chatbot/web.config
@@ -6,7 +6,7 @@
     <!-- indicates that the server.js file is a node.js application 
     to be handled by the iisnode module -->
     <handlers>
-      <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
+      <add name="iisnode" path="chatbot/server.js" verb="*" modules="iisnode" />
     </handlers>
     <rewrite>
       <rules>
