--- a/Web.config
+++ b/Web.config
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <location path="chatbot">
+    <location path="/">
         <system.webServer>
             <modules runAllManagedModulesForAllRequests="false" />
             <!-- indicates that the server.js file is a node.js application 
             to be handled by the iisnode module -->
             <handlers>
-                <add name="iisnode" path="chatbot/server.js" verb="*" modules="iisnode" />
+                <add name="iisnode" path="index.js" verb="*" modules="iisnode" />
             </handlers>
             <rewrite>
                 <rules>
                     <rule name="app" enabled="true" patternSyntax="ECMAScript" stopProcessing="true">
                         <match url="chatbot" negate="true" />
                         <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
-                        <action type="Rewrite" url="chatbot/server.js" />
+                        <action type="Rewrite" url="/index.js" />
                     </rule>
                 </rules>
             </rewrite>
@@ -21,7 +21,7 @@
     </location>
     <system.webServer>
         <handlers>
-            <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
+            <add name="iisnode" path="index.js" verb="*" modules="iisnode" />
         </handlers>
     </system.webServer>
 </configuration>
