--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 APP_SECRET = vFLPazrsvgQ.cwA.-DQ.ZjiytkPT4FzRLO9ld0lYQBgVly0ruSNvavU3AbUSvSw
+SMS_AUTHORIZATIONKEY = aGVsbG93aWZpOmhlbGxvd2lmaSMxMjM=
+SMS_SENDLINK = https://app.digi.com.my/digiext/smsmt/
 DEVELOPMENT = 1
