everything screwed up

--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-APP_SECRET = vFLPazrsvgQ.cwA.-DQ.ZjiytkPT4FzRLO9ld0lYQBgVly0ruSNvavU3AbUSvSw
-SMS_AUTHORIZATIONKEY = aGVsbG93aWZpOmhlbGxvd2lmaSMxMjM=
-SMS_SENDLINK = https://app.digi.com.my/digiext/smsmt/
+APP_SECRET = qCTMpSsu6ys.cwA.sTA.sSJKzrAWjk3RX7tdaLbCDO2YglGj6_u9OR0qXkIsER0
 DEVELOPMENT = 1
