fixed undefined log

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-APP_SECRET = vFLPazrsvgQ.cwA.-DQ.ZjiytkPT4FzRLO9ld0lYQBgVly0ruSNvavU3AbUSvSw
+APP_SECRET = qCTMpSsu6ys.cwA.9CE.eDpI53yHEw5Ch9jLcr7CSEaPSj_0Byv-M4nQ0aGllmQ
 DEVELOPMENT = 1
