moved parameters to environment

--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 APP_SECRET = qCTMpSsu6ys.cwA.9CE.eDpI53yHEw5Ch9jLcr7CSEaPSj_0Byv-M4nQ0aGllmQ
+SBP_SMS_AUTHORIZATIONKEY = aGVsbG93aWZpOmhlbGxvd2lmaSMxMjM=
+SBP_SMS_SENDURL = https://app.digi.com.my/digiext/smsmt/
+APIGW_URL = https://apisandbox.digi.com.my
+APIGW_SMS_AUTH_CLIENT_ID = 9HussWmAhEezwuozGIecrqddbJbEW5Gd
+APIGW_SMS_AUTH_CLIENT_SECRET = iQEHW4mAY9aCtGl3
+CHATBOT_LOG_AUTH_KEY = a6hea2
+CHATBOT_LOG_URL = https://digibid.azurewebsites.net/action.ashx
 DEVELOPMENT = 1
-STAGING = 1
+LOGGING = 1
