--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ CHATBOT_LOG_AUTH_KEY = a6hea2
 CHATBOT_LOG_URL = https://digibid.azurewebsites.net/action.ashx
 DEVELOPMENT = 1
 LOGGING = 1
+APPINSIGHTS_INSTRUMENTATIONKEY = fdf42f59-93b2-4444-bda3-eaa91b734a63
