--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_SECRET = qCTMpSsu6ys.cwA.9CE.eDpI53yHEw5Ch9jLcr7CSEaPSj_0Byv-M4nQ0aGllmQ
+APP_SECRET = djpC0XKWoQ4.cwA.IdA.9p_TgOZKbZZ1_Z_92VTtoWjvdE8unOfSrNVI7bz-r2E
 SBP_SMS_AUTHORIZATIONKEY = aGVsbG93aWZpOmhlbGxvd2lmaSMxMjM=
 SBP_SMS_SENDURL = https://app.digi.com.my/digiext/smsmt/
 APIGW_URL = https://apisandbox.digi.com.my
@@ -8,4 +8,4 @@ CHATBOT_LOG_AUTH_KEY = a6hea2
 CHATBOT_LOG_URL = https://digibid.azurewebsites.net/action.ashx
 DEVELOPMENT = 1
 LOGGING = 1
-APPINSIGHTS_INSTRUMENTATIONKEY = fdf42f59-93b2-4444-bda3-eaa91b734a63
+APPINSIGHTS_INSTRUMENTATIONKEY =74f86a92-2494-4cbf-91cd-13f396307405
