--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@types/node-fetch": "0.0.4",
     "applicationinsights": "^0.19.0",
     "body-parser": "^1.15.2",
-    "botbuilder": "^3.7.0",
+    "botbuilder": "^3.8.0",
+    "botframework": "^0.18.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^2.0.0",
     "ejs": "^2.5.2",
