--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ CHATBOT_LOG_URL = https://digibid.azurewebsites.net/action.ashx
 DEVELOPMENT = 1
 LOGGING = 1
 APPINSIGHTS_INSTRUMENTATIONKEY =74f86a92-2494-4cbf-91cd-13f396307405
+APIAI_CLIENT_ACCESS_TOKEN=91c23d61bc464727981a1e80ca85753e
