--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_SECRET = djpC0XKWoQ4.cwA.IdA.9p_TgOZKbZZ1_Z_92VTtoWjvdE8unOfSrNVI7bz-r2E
+APP_SECRET = qCTMpSsu6ys.cwA.sTA.sSJKzrAWjk3RX7tdaLbCDO2YglGj6_u9OR0qXkIsER0
 SBP_SMS_AUTHORIZATIONKEY = aGVsbG93aWZpOmhlbGxvd2lmaSMxMjM=
 SBP_SMS_SENDURL = https://app.digi.com.my/digiext/smsmt/
 APIGW_URL = https://apisandbox.digi.com.my
