--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "applicationinsights": "^0.19.0",
     "body-parser": "^1.15.2",
     "botbuilder": "^3.8.3",
+    "botbuilder-azure": "^3.0.2",
     "botframework": "^0.18.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^2.0.0",
@@ -35,6 +36,7 @@
     "node-emoji": "^1.5.1",
     "node-fetch": "^1.6.3",
     "node-rest-client": "^3.1.0",
+    "php-express": "0.0.3",
     "serve-favicon": "^2.4.2"
   },
   "devDependencies": {
